[gd_scene load_steps=15 format=3 uid="uid://bn0o5gyjoo4un"]

[ext_resource type="Script" path="res://Scripts/main_game.gd" id="1_k015l"]
[ext_resource type="Texture2D" uid="uid://dl66pahmplk71" path="res://Sprites/FoxCoin_Dealer.png" id="2_uijv0"]
[ext_resource type="Texture2D" uid="uid://ckhk7e4lj27yr" path="res://Sprites/FoxCoinConcepts_Heads.png" id="3_u33ss"]
[ext_resource type="Texture2D" uid="uid://dyayargx7nk40" path="res://Sprites/FoxCoinConcepts_Tails.png" id="4_edq3u"]
[ext_resource type="Theme" uid="uid://dsk5olnx1e77u" path="res://FancyTheme.tres" id="5_cxspc"]
[ext_resource type="PackedScene" uid="uid://t6mev4v78cwu" path="res://Scenes/coin_flip_history.tscn" id="6_yecaa"]
[ext_resource type="Texture2D" uid="uid://c1dqycrxriler" path="res://icon.svg" id="7_v46qd"]
[ext_resource type="PackedScene" uid="uid://cvxdjuqp6ax2d" path="res://Scenes/audio.tscn" id="9_2ujpw"]
[ext_resource type="PackedScene" uid="uid://g7r0abvn0dli" path="res://Scenes/coin_betting.tscn" id="9_rbtme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbx8f"]
bg_color = Color(0.470588, 0.741176, 0.847059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6i8jf"]
bg_color = Color(0.396078, 0.654902, 0.756863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx51y"]
bg_color = Color(0.356863, 0.0784314, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k87cx"]
bg_color = Color(0.356863, 0.0784314, 0.109804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_geymj"]
bg_color = Color(0.870588, 0.666667, 0.54902, 1)

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k015l")

[node name="BackgroundColour" type="ColorRect" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")
color = Color(0.862745, 0.862745, 0.8, 1)

[node name="Dealer" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -299.0
offset_right = 272.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(245, 142.5)
theme = ExtResource("5_cxspc")
texture = ExtResource("2_uijv0")
expand_mode = 1

[node name="CoinHeadsSide" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 17.0
offset_right = 120.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(110, 110)
theme = ExtResource("5_cxspc")
texture = ExtResource("3_u33ss")
expand_mode = 1

[node name="CoinTailsSide" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = 19.5
offset_right = 115.5
offset_bottom = 234.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1e-05)
pivot_offset = Vector2(105, 105)
theme = ExtResource("5_cxspc")
texture = ExtResource("4_edq3u")
expand_mode = 1

[node name="NextCoinButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 11.5
offset_top = -88.2501
offset_right = 188.5
offset_bottom = -3.25012
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_cxspc")
theme_override_font_sizes/font_size = 30
text = "Flip"

[node name="CoinAmmount" type="Label" parent="NextCoinButton"]
layout_mode = 0
offset_left = 66.5
offset_top = -28.7499
offset_right = 106.5
offset_bottom = 0.25012
theme = ExtResource("5_cxspc")
theme_override_colors/font_color = Color(0.815686, 0.396078, 0.34902, 1)
text = "0/6
"

[node name="ReDoCoinButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -89.2501
offset_right = 7.0
offset_bottom = -4.25012
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_cxspc")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_dbx8f")
theme_override_styles/normal = SubResource("StyleBoxFlat_6i8jf")
text = "Re-Flip
"

[node name="ReflipAmmount" type="Label" parent="ReDoCoinButton"]
layout_mode = 0
offset_left = 72.0
offset_top = -28.7499
offset_right = 112.0
offset_bottom = 0.25012
theme = ExtResource("5_cxspc")
theme_override_colors/font_color = Color(0.396078, 0.654902, 0.756863, 1)
text = "x3
"

[node name="CoinFlipHistory" parent="." instance=ExtResource("6_yecaa")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -212.0
offset_right = 293.0
offset_bottom = -4.0
grow_vertical = 0

[node name="ExplanationPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = -303.0
offset_top = 29.0
offset_right = -1.0
offset_bottom = 257.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yx51y")

[node name="ScoringExplanation" type="Label" parent="ExplanationPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -94.5
offset_right = 130.0
offset_bottom = 94.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")
theme_override_colors/font_color = Color(0.862745, 0.862745, 0.8, 1)
text = "Scoring: 
Coins flipped reward
points when scored, 
flipping a row of coins
will multiply their value
by the length of the row."
horizontal_alignment = 1

[node name="Button" type="Button" parent="ExplanationPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -45.0
offset_right = 43.0
offset_bottom = 36.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("5_cxspc")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_k87cx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k87cx")
toggle_mode = true
text = "?"

[node name="CurrentRoundLabel" type="Label" parent="."]
modulate = Color(0.815686, 0.396078, 0.34902, 1)
layout_mode = 0
offset_left = 369.0
offset_top = 226.0
offset_right = 479.0
offset_bottom = 289.0
theme = ExtResource("5_cxspc")
text = "Round 
1/6"

[node name="RoundScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 299.0
offset_right = 585.0
offset_bottom = 362.0
theme = ExtResource("5_cxspc")
theme_override_colors/font_color = Color(0.815686, 0.396078, 0.34902, 1)
theme_override_font_sizes/font_size = 30
text = "0/"
horizontal_alignment = 2

[node name="RequiredScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 585.0
offset_top = 299.0
offset_right = 695.0
offset_bottom = 362.0
theme = ExtResource("5_cxspc")
theme_override_colors/font_color = Color(0.396078, 0.654902, 0.756863, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="CoinBetting" parent="." instance=ExtResource("9_rbtme")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 21.0
offset_top = -43.0
offset_right = 292.0
offset_bottom = 83.0
grow_vertical = 2

[node name="ShopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -325.0
offset_right = 359.0
offset_bottom = 324.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("5_cxspc")
theme_override_styles/panel = SubResource("StyleBoxFlat_geymj")

[node name="ShopTitle" type="Label" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_right = 99.0
offset_bottom = 43.0
grow_horizontal = 2
theme = ExtResource("5_cxspc")
theme_override_font_sizes/font_size = 34
text = "Shop"
horizontal_alignment = 1

[node name="PurchaseCount" type="Label" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 37.5
offset_right = 126.0
offset_bottom = 84.5
grow_horizontal = 2
theme = ExtResource("5_cxspc")
theme_override_font_sizes/font_size = 22
text = "Purchases: 0/2"
horizontal_alignment = 1

[node name="BuyPointsPanel" type="Panel" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -248.5
offset_right = 112.0
offset_bottom = -184.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")

[node name="Label" type="Label" parent="ShopPanel/BuyPointsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -31.0
offset_right = 175.0
offset_bottom = 33.0
grow_vertical = 2
theme = ExtResource("5_cxspc")
text = "+50 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ShopPanel/BuyPointsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -23.0
offset_right = -10.5
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("5_cxspc")
text = "+"

[node name="BuyCoinsPanel" type="Panel" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -175.5
offset_right = 112.0
offset_bottom = -112.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")

[node name="Label" type="Label" parent="ShopPanel/BuyCoinsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.5
offset_right = 175.0
offset_bottom = 31.5
grow_vertical = 2
theme = ExtResource("5_cxspc")
text = "+1 Coin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ShopPanel/BuyCoinsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -23.0
offset_right = -10.5
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("5_cxspc")
text = "+"

[node name="BuyReflips" type="Panel" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -107.5
offset_right = 112.0
offset_bottom = -44.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")

[node name="Label" type="Label" parent="ShopPanel/BuyReflips"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -31.0
offset_right = 175.0
offset_bottom = 31.0
grow_vertical = 2
theme = ExtResource("5_cxspc")
text = "+1 Re-Flip"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ShopPanel/BuyReflips"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -23.0
offset_right = -10.5
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("5_cxspc")
text = "+"

[node name="DividingLine" type="ColorRect" parent="ShopPanel"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 296.5
offset_right = 341.0
offset_bottom = 305.5
theme = ExtResource("5_cxspc")

[node name="Item1" type="Panel" parent="ShopPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -1.0
offset_right = 114.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")

[node name="ItemName" type="Label" parent="ShopPanel/Item1"]
layout_mode = 1
offset_right = 175.0
offset_bottom = 24.0
text = "Snake Eye"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="ShopPanel/Item1"]
layout_mode = 1
offset_top = 24.0
offset_right = 174.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 12
text = "Flipping a coin that breaks the current pattern adds +50 to next coin"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="ShopPanel/Item1"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -23.0
offset_right = -10.5
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
text = "+"

[node name="Item2" type="Panel" parent="ShopPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = 106.0
offset_right = 114.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")

[node name="ItemName" type="Label" parent="ShopPanel/Item2"]
layout_mode = 1
offset_right = 175.0
offset_bottom = 24.0
text = "Wet Matches"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="ShopPanel/Item2"]
layout_mode = 1
offset_top = 24.0
offset_right = 174.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 12
text = "Consecutive Tails give +0.5x 
per coin"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="ShopPanel/Item2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -23.0
offset_right = -10.5
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
text = "+"

[node name="Item3" type="Panel" parent="ShopPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = 213.0
offset_right = 114.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")

[node name="ItemName" type="Label" parent="ShopPanel/Item3"]
layout_mode = 1
offset_right = 175.0
offset_bottom = 24.0
text = "Spatula Head"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="ShopPanel/Item3"]
layout_mode = 1
offset_top = 24.0
offset_right = 174.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 12
text = "Once per round, flip a coin
to the opposite value"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="ShopPanel/Item3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -23.0
offset_right = -10.5
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
text = "+"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -282.0
offset_right = -80.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")

[node name="Title" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.5
offset_right = 100.5
offset_bottom = 70.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 41
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 354.0
offset_top = -119.0
offset_right = 684.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
text = "Try Again? "

[node name="GameWonPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -282.0
offset_right = -80.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cxspc")

[node name="Title" type="Label" parent="GameWonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -35.0
offset_right = 100.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 52
text = "You Win!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="GameWonPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 354.0
offset_top = -119.0
offset_right = 684.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
text = "Thank You for Playing
Highest Score : 30000"

[node name="Credits" type="Label" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 586.0
offset_right = 1150.0
offset_bottom = 647.0
theme = ExtResource("5_cxspc")
text = "A Game by Leslie Llama
Made for Minijam 176"

[node name="Item1" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 19.0
offset_top = 7.0
offset_right = 296.0
offset_bottom = 146.0
theme = ExtResource("5_cxspc")

[node name="TextureRect" type="TextureRect" parent="Item1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.5
offset_right = 67.0
offset_bottom = 32.5
grow_vertical = 2
texture = ExtResource("7_v46qd")
expand_mode = 1

[node name="Item Title" type="Label" parent="Item1"]
modulate = Color(0.356863, 0.0784314, 0.109804, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -191.0
offset_bottom = 38.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Sunny Side Up"
vertical_alignment = 1

[node name="Item Description" type="Label" parent="Item1"]
modulate = Color(0.356863, 0.0784314, 0.109804, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -191.0
offset_top = -90.0
grow_horizontal = 0
grow_vertical = 0
text = "Heads coins give +50 points for every tails flipped"
autowrap_mode = 3

[node name="Item2" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 16.0
offset_top = 138.0
offset_right = 293.0
offset_bottom = 277.0
theme = ExtResource("5_cxspc")

[node name="TextureRect" type="TextureRect" parent="Item2"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.5
offset_right = 67.0
offset_bottom = 32.5
grow_vertical = 2
texture = ExtResource("7_v46qd")
expand_mode = 1

[node name="Item Title" type="Label" parent="Item2"]
modulate = Color(0.356863, 0.0784314, 0.109804, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -191.0
offset_bottom = 38.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Empty"
vertical_alignment = 1

[node name="Item Description" type="Label" parent="Item2"]
modulate = Color(0.356863, 0.0784314, 0.109804, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -191.0
offset_top = -90.0
grow_horizontal = 0
grow_vertical = 0
autowrap_mode = 3

[node name="Title" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -925.0
offset_bottom = 153.0
grow_horizontal = 0

[node name="TitleFox" type="Label" parent="Title"]
layout_mode = 0
offset_right = 296.0
offset_bottom = 178.0
theme = ExtResource("5_cxspc")
theme_override_colors/font_color = Color(0.815686, 0.396078, 0.34902, 1)
theme_override_font_sizes/font_size = 140
text = "FOX"

[node name="TitleFlipper" type="Label" parent="Title"]
layout_mode = 0
offset_left = 428.0
offset_top = -2.0
offset_right = 921.0
offset_bottom = 255.0
theme = ExtResource("5_cxspc")
theme_override_colors/font_color = Color(0.396078, 0.654902, 0.756863, 1)
theme_override_font_sizes/font_size = 140
text = "FLIPPER"

[node name="Audio" parent="." instance=ExtResource("9_2ujpw")]

[connection signal="button_up" from="NextCoinButton" to="." method="_on_next_coin_button_button_up"]
[connection signal="button_up" from="ReDoCoinButton" to="." method="_on_re_do_coin_button_button_up"]
[connection signal="toggled" from="ExplanationPanel/Button" to="." method="_on_HelpButton_toggled"]
[connection signal="button_up" from="ShopPanel/BuyPointsPanel/Button" to="." method="_add_points"]
[connection signal="button_up" from="ShopPanel/BuyPointsPanel/Button" to="." method="add_purchase"]
[connection signal="button_up" from="ShopPanel/BuyCoinsPanel/Button" to="." method="_add_coin"]
[connection signal="button_up" from="ShopPanel/BuyCoinsPanel/Button" to="." method="add_purchase"]
[connection signal="button_up" from="ShopPanel/BuyReflips/Button" to="." method="add_purchase"]
[connection signal="button_up" from="ShopPanel/BuyReflips/Button" to="." method="_add_reflips"]
[connection signal="button_up" from="GameOverPanel/RetryButton" to="." method="_on_retry_button_button_up"]
